repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__tool_project_by__perform_failure_ambiguity_with_disabled_autoresolve_json.snap
---
source: repology-webapp/tests/snapshot_tests/tool_project_by.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 300
Header: content-type: application/json
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: content-length: 152
---
{"_comment":"Ambiguous redirect, multiple target projects are possible","targets":{"iperf2":"/api/v1/project/iperf2","iperf3":"/api/v1/project/iperf3"}}
